refactor(rpc): use getLast() instead of get(size - 1) [REVIEW8-2.2]
Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>